--- a/ffmpeg-sharp/src/FFmpegSharp.csproj
+++ b/ffmpeg-sharp/src/FFmpegSharp.csproj
@@ -299,7 +299,7 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="IVideoStream.cs" />
-    <Compile Include="MediaFile.cs" />
+    <Compile Include="MediaFileReader.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Interop\ZeroTrueBoolMarshaller.cs" />
     <Compile Include="VideoDecoderStream.cs" />
