--- a/ffmpeg-sharp/src/FFmpegSharp.csproj
+++ b/ffmpeg-sharp/src/FFmpegSharp.csproj
@@ -300,6 +300,7 @@
     </Compile>
     <Compile Include="IVideoStream.cs" />
     <Compile Include="MediaFileReader.cs" />
+    <Compile Include="MediaFileWriter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Interop\ZeroTrueBoolMarshaller.cs" />
     <Compile Include="VideoDecoderStream.cs" />
