--- a/ffmpeg-sharp/src/FFmpegSharp.csproj
+++ b/ffmpeg-sharp/src/FFmpegSharp.csproj
@@ -308,7 +308,9 @@
     </Compile>
     <Compile Include="IVideoStream.cs" />
     <Compile Include="MediaFileReader.cs" />
-    <Compile Include="MediaFileWriter.cs" />
+    <Compile Include="MediaFileWriter.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Interop\ZeroTrueBoolMarshaller.cs" />
     <Compile Include="VideoDecoderStream.cs" />
